# oximg

./: .gitignore  BENCH.md  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  THIRD-PARTY-LICENSES.md  about.hbs  about.toml  build.rs  deny.toml
.github/workflows/: ci.yml  compliance.yml  docker.yml  release.yml
bench/: METHODOLOGY.md  ab_interleaved.sh  bench.sh  bytecmp.sh  coldstart.sh  image-servers-benchmark.patch  metadata_cells.sh  native.sh  stress.js  stress.sh  toggle_ab.sh
bench/quality/: QUALITY.md  analyze.py  run.py  sharp_runner.js  xfmt_sweep.py
bench/tools/: avif_parity.rs  decode_bench.rs  enc_loop.rs  qcli.rs  resize_bench.rs  resize_bench_x86.rs
examples/: avif_parity.rs  enc_loop.rs  probe.rs  qcli.rs  thumbnail.rs  transcode.rs
npm/: README.md  package.json
src/: avif.rs  config.rs  lib.rs  main.rs  meta.rs  pipeline.rs  resize_avx2.rs  resize_kernel.rs  resize_neon.rs  yuv.rs
src/avif/: decode.rs  encode.rs  isobmff.rs  mod.rs  rgb2yuv.rs  tests.rs
src/pipeline/: cmyk.rs  encode.rs  formats.rs  fuse.rs  jpeg.rs  mod.rs  tests.rs
src/svt/: bindings.rs  mod.rs
tests/: formats.rs  formats_avif.rs  formats_cmyk.rs  formats_icc.rs  formats_orientation.rs  server.rs
tests/common/: mod.rs
tests/fixtures/: README.md  alpha.avif  anim.avif  anim_meta.avif  cmyk_icc.ppm  cmyk_sub.ppm  cmyk_t0.ppm  icc.avif  orient_imir0.avif  orient_imir1.avif  orient_irot1.avif  orient_irot1_imir1.avif  orient_irot3_icc.avif  photo.avif  regen.sh
