[package]
name = "oximg"
version = "0.4.2"
edition = "2024"
# Let-chains; verified by the CI msrv job.
rust-version = "1.88"
description = "High-performance image compression: library, CLI, and self-hostable server (PoC)."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/oximg/oximg"
keywords = ["image", "jpeg", "resize", "compression", "server"]
categories = ["multimedia::images", "web-programming::http-server"]

[dependencies]
avif-parse = { version = "2", optional = true }
avif-serialize = { version = "0.8", optional = true }
dav1d-sys = { version = "0.8", optional = true }
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "signal", "fs"] }
mozjpeg = "0.10"
fast_image_resize = "5"
anyhow = "1"
mimalloc = { version = "0.1.52", optional = true }
jpegli = "0.1.0"
ureq = "3.3.0"
png = "0.18.1"
libwebp-sys = { version = "0.14", features = ["neon"] }
hmac = "0.13.0"
sha2 = "0.11.0"

[profile.release]
lto = true
codegen-units = 1
# Note: panic = "abort" must NOT be set; the mozjpeg crate relies on
# unwinding to handle libjpeg errors.

[target.'cfg(target_arch = "x86_64")'.dependencies]
pic-scale = "0.7"

[features]
default = []
avif = ["dep:avif-serialize", "dep:avif-parse", "dep:dav1d-sys"]

[[example]]
name = "avif_parity"
required-features = ["avif"]

[[example]]
name = "enc_loop"
required-features = ["avif"]
