[package]
name = "oximg"
version = "0.5.0"
edition = "2024"
# Bounded by pic-scale (1.89); verified by the CI msrv job.
rust-version = "1.89"
description = "High-performance image compression: library, CLI, and self-hostable server (PoC)."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/oximg/oximg"
keywords = ["image", "jpeg", "resize", "compression", "server"]
categories = ["multimedia::images", "web-programming::http-server"]

[dependencies]
avif-parse = { version = "2", optional = true }
avif-serialize = { version = "0.8", optional = true }
dav1d-sys = { version = "0.8", optional = true }
axum = { version = "0.8", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "signal", "fs"], optional = true }
mozjpeg = "0.10"
fast_image_resize = "5"
anyhow = "1"
mimalloc = { version = "0.1.52", optional = true }
jpegli = "0.1.0"
ureq = { version = "3.3.0", optional = true }
png = "0.18.1"
libwebp-sys = { version = "0.14", features = ["neon"] }
hmac = { version = "0.13.0", optional = true }
sha2 = { version = "0.11.0", optional = true }

[profile.release]
lto = true
codegen-units = 1
# Note: panic = "abort" must NOT be set; the mozjpeg crate relies on
# unwinding to handle libjpeg errors.

[target.'cfg(target_arch = "x86_64")'.dependencies]
pic-scale = "0.7"

[features]
# The `oximg` binary needs `server`; it is on by default so `cargo
# build`/`cargo install` produce it. Library users who only want the
# `pipeline` API build with `--no-default-features` to drop the whole
# HTTP stack (axum, tokio, ureq, hmac, sha2).
default = ["server"]
server = ["dep:axum", "dep:tokio", "dep:ureq", "dep:hmac", "dep:sha2"]
avif = ["dep:avif-serialize", "dep:avif-parse", "dep:dav1d-sys"]
# Re-exposes the internal SIMD resize kernels for the resize_bench
# examples; not part of the public API.
bench-internals = []

[[bin]]
name = "oximg"
required-features = ["server"]

# Benchmark/dev tools live under bench/tools/ (kept out of examples/,
# which is library-usage only) but stay runnable as `cargo run
# --example NAME` — run.py and QUALITY.md rely on the example name.
[[example]]
name = "qcli"
path = "bench/tools/qcli.rs"

[[example]]
name = "decode_bench"
path = "bench/tools/decode_bench.rs"

[[example]]
name = "resize_bench"
path = "bench/tools/resize_bench.rs"
required-features = ["bench-internals"]

[[example]]
name = "resize_bench_x86"
path = "bench/tools/resize_bench_x86.rs"
required-features = ["bench-internals"]

[[example]]
name = "avif_parity"
path = "bench/tools/avif_parity.rs"
required-features = ["avif"]

[[example]]
name = "enc_loop"
path = "bench/tools/enc_loop.rs"
required-features = ["avif"]
